[gd_scene load_steps=8 format=3 uid="uid://bqi2sbg7y32ev"]

[ext_resource type="Script" uid="uid://6shvjrxe5tbc" path="res://Turret/turret.gd" id="1_5kpma"]
[ext_resource type="PackedScene" uid="uid://bfhsedt45lq2u" path="res://Turret/projectile.tscn" id="2_djkev"]
[ext_resource type="PackedScene" uid="uid://dpqqfp5vuxaxi" path="res://Assets/Cannon.glb" id="3_r754r"]
[ext_resource type="PackedScene" uid="uid://8hxp5r7cgh8x" path="res://Assets/TurretBase.glb" id="3_ttsi1"]

[sub_resource type="Animation" id="Animation_ttsi1"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurretBase:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 2.12376, 0.0114237)]
}

[sub_resource type="Animation" id="Animation_djkev"]
resource_name = "fire"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurretBase:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 2.12376, -0.409274), Vector3(0, 2.12376, 0.0114237)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r754r"]
_data = {
&"RESET": SubResource("Animation_ttsi1"),
&"fire": SubResource("Animation_djkev")
}

[node name="Turret" type="Node3D"]
script = ExtResource("1_5kpma")
projectile = ExtResource("2_djkev")

[node name="TurretBase" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.12376, 0.0114237)

[node name="Cannon" parent="TurretBase" instance=ExtResource("3_r754r")]

[node name="ProjectileSpawnPoint" type="Marker3D" parent="TurretBase/Cannon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.788413, 1.17124)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r754r")
}

[node name="TurretBase2" parent="." instance=ExtResource("3_ttsi1")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
